tests/errors/alfa/runtime_error_div_by_0.alfa
//****Error de ejecucion: Division por cero.
main
{
    int x, y, res;

    x=3;
    y=0;
    res =  x / y;
}    